<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.welcome.WelcomeActivity"
    android:paddingHorizontal="16dp"
    >


    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:src="@drawable/image_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        />

    <TextView
        android:id="@+id/tv_titleWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome_title"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/img_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/tv_titleDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome_description"
        android:textAlignment="center"
        android:textSize="13sp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/tv_titleWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:alpha="100"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="13dp"
        android:textSize="16sp"
        android:text="@string/login"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#E45858"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@id/btn_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:alpha="100"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="13dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="#FFE0E0"
        android:text="@string/sign_up"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:alpha="100"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

</androidx.constraintlayout.widget.ConstraintLayout>