<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.AddStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/previewImage"
                android:layout_width="0dp"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/baseline_image_24"

                />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_camera"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_galery"
                app:layout_constraintTop_toBottomOf="@id/previewImage"

                />

            <Button
                android:id="@+id/btn_galery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_galery"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toEndOf="@id/btn_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/previewImage"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_description"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_camera"
                >

                <co.id.storyapp.customview.EditDescriptionText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/tv_description"
                    android:inputType="textMultiLine"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tv_upload"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_description"

                />

            <ProgressBar
                android:id="@+id/ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</LinearLayout>