<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignUpActivity">

    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_signup_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/black"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUsernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_person_24"
        android:hint="@string/hint_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintTop_toBottomOf="@id/inputUsernameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint_email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/hint_password"
        android:alpha="0"
        tools:alpha="100"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmailLayout"
        >

        <co.id.storyapp.customview.EditPasswordText
            android:id="@+id/inputPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <co.id.storyapp.customview.EditButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintTop_toBottomOf="@id/inputPasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/Progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="137dp" />

</androidx.constraintlayout.widget.ConstraintLayout>