<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/login"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0"
        tools:alpha="100"
        />

    <TextView
        android:id="@+id/tv_titleSub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_ajakan_login"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login"
        android:alpha="0"
        tools:alpha="100"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintTop_toBottomOf="@id/tv_titleSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint_email"
        android:alpha="0"
        tools:alpha="100"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmailLayout"
        android:alpha="0"
        tools:alpha="100"
        >

        <co.id.storyapp.customview.EditPasswordText
            android:id="@+id/inputPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <co.id.storyapp.customview.EditButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputPasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0"
        tools:alpha="100"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="87dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="380dp" />


</androidx.constraintlayout.widget.ConstraintLayout>